# vccs-compiler

./: .gitignore  ast.ml  ccs.syntax  license  readme.md  vccs-compiler.opam  vccs.syntax
ccs/: ast.ml  dune  pretty_print.ml  syntax.bnf
ccs-lib/: syntax.bnf
lib/: ast.ml  dune  lexer.mll  main.ml  parser.mly  pretty_print.ml
src/: dune  lexer.mll  main.ml  parser.mly
test/: arithm-precedence.vccs  arithm.vccs  bool-precedence.vccs  constant-call.vccs  constant.vccs  counter.vccs  def.vccs  emit.vccs  empty-args.vccs  empty-params.vccs  error-multiline.vccs  error.vccs  ids.vccs  if-precedence.vccs  if-var-unbound.vccs  if-var.vccs  if.vccs  input-emit.vccs  lt.vccs  param.vccs  params.vccs  precedence-explicit.vccs  precedence.vccs  redirection-multiple.vccs  redirection.vccs  restriction-multiple.vcss  restriction.vcss  shadowing.vccs  spaces.vccs  tau.vccs  unicode.vccs  zero-zero.vccs  zero.vccs
vccs/: ast.ml  dune  error.ml  eval.ml  expansion.ml  lexer.mll  main.ml  parser.mly  pretty_print.ml  substitution.ml  syntax.bnf  syntax_error.ml  var_expansion.ml  var_substitution.ml
vccs-lib/: syntax.bnf
